k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-platform
  labels:
    app: devops-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: devops-platform

  template:
    metadata:
      labels:
        app: devops-platform

    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: devops-platform-secret

      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: devops-platform
          image: ghcr.io/grim-82/devops-platform:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
          - name: secret-volume
            mountPath: /etc/secrets
            readOnly: true

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"

            limits:
              cpu: "200m"
              memory: "128Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
