k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-platform

spec:
  type: ClusterIP

  selector:
    app: devops-platform

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
