k8s/networkpolicy-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-ingress-policy
  namespace: dev

spec:
  podSelector:
    matchLabels:
      run: test-nginx

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              run: test-client
      ports:
        - protocol: TCP
          port: 80
